--- a/front-end/src/app/components/main/cart/cart.component.html
+++ b/front-end/src/app/components/main/cart/cart.component.html
@@ -14,7 +14,8 @@
           </tr>
         </thead>
         <tbody id="cart-items">
-          <tr *ngFor="let item of cartItems">
+          <!-- <tr *ngFor="let item of cartItems">
+
             <td>
               <img
                 [src]="item.image"
@@ -43,7 +44,49 @@
                 Remove
               </button>
             </td>
-          </tr>
+          </tr> -->
+
+        <tr *ngFor="let item of cartItems">
+          <th scope="row">
+            <div class="d-flex align-items-center">
+              <img [src]="item.image" class="img-fluid me-5 rounded-circle" style="width: 80px; height: 80px;" alt="">
+            </div>
+          </th>
+          <td>
+            <p class="mb-0 mt-4">{{item.name}}</p>
+          </td>
+          <td>
+            <p class="mb-0 mt-4">{{item.price}}</p>
+          </td>
+          <td>
+            <div class="input-group quantity mt-4" style="width: 100px;">
+              <div class="input-group-btn">
+                <!-- Decrement button, bound to decrementQuantity -->
+                <button class="btn btn-sm btn-minus rounded-circle bg-light border" (click)="decrementQuantity(item)">
+                  <i class="fa fa-minus"></i>
+                </button>
+              </div>
+              <!-- Two-way data binding for the quantity input field -->
+              <input type="text" class="form-control form-control-sm text-center border-0" [(ngModel)]="item.quantity">
+              <div class="input-group-btn">
+                <!-- Increment button, bound to incrementQuantity -->
+                <button class="btn btn-sm btn-plus rounded-circle bg-light border" (click)="incrementQuantity(item)">
+                  <i class="fa fa-plus"></i>
+                </button>
+              </div>
+            </div>
+          </td>
+          <td>
+            <!-- Total price calculated based on quantity -->
+            <p class="mb-0 mt-4">${{ item.price * item.quantity }}</p>
+          </td>
+          <td>
+            <button class="btn btn-md rounded-circle bg-light border mt-4" (click)="removeProductId(item._id)">
+              <i class="fa fa-times text-danger"></i>
+            </button>
+          </td>
+        </tr>
+
         </tbody>
       </table>
     </div>
@@ -74,25 +117,26 @@
                   </h1>
                   <div class="d-flex justify-content-between mb-4">
                     <h5 class="mb-0 me-4">Subtotal:</h5>
-                    <p class="mb-0" id="cart-subtotal">$0.00</p>
+                    <p class="mb-0" id="cart-subtotal">${{totalPrice}}</p>
                   </div>
-                  <div class="d-flex justify-content-between">
+                  <!-- <div class="d-flex justify-content-between">
                     <h5 class="mb-0 me-4">Shipping</h5>
                     <div>
                       <p class="mb-0">Flat rate: $3.00</p>
                     </div>
-                  </div>
-                  <p class="mb-0 text-end">Shipping to Ukraine.</p>
+                  </div> -->
+                  <!-- <p class="mb-0 text-end">Shipping to Ukraine.</p> -->
                 </div>
                 <div
                   class="py-4 mb-4 border-top border-bottom d-flex justify-content-between"
                 >
                   <h5 class="mb-0 ps-4 me-4">Total</h5>
-                  <p class="mb-0 pe-4" id="cart-total">$0.00</p>
+                  <p class="mb-0 pe-4" id="cart-total">{{totalPrice}}</p>
                 </div>
                 <button
                   class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4 btn-proceed-checkout"
                   type="button"
+                  (click)="submitCart()"
                 >
                   Proceed Checkout
                 </button>
