--- a/styles/style.css
+++ b/styles/style.css
@@ -255,7 +255,8 @@ body {
   }
 .content_1 img{
     position: absolute;
-    top: 10px;
+    /* top: 10px; */
+    display: none;
     right: 15px;
     height: 300px;
 }
